--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "jsonwebtoken": "^9.0.0",
     "md5": "^2.3.0",
     "mongoose": "^7.2.0",
     "next": "13.4.3",
@@ -16,6 +17,7 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/md5": "^2.3.2",
     "@types/node": "^20.2.2",
     "@types/react": "^18.2.6",
