--- a/package.json
+++ b/package.json
@@ -9,16 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "cosmicjs": "^4.3.7",
     "jsonwebtoken": "^9.0.0",
     "md5": "^2.3.0",
+    "moment": "^2.29.4",
     "mongoose": "^7.2.0",
+    "multer": "^1.4.5-lts.1",
     "next": "13.4.3",
+    "next-connect": "^1.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.2",
     "@types/md5": "^2.3.2",
+    "@types/multer": "^1.4.7",
     "@types/node": "^20.2.2",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
